--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "format": "prettier --write \"src/**/*.{js,ts,json,css,html}\""
   },
   "devDependencies": {
+    "prettier": "^3.8.1",
     "typescript": "^5.9.3",
     "vite": "^7.3.1"
   },
